# python-termii

./: .gitignore  README.md  pyproject.toml  termii.py
archives/dist-1.0.0/: termii_python_client-1.0.0-py3-none-any.whl
archives/dist-1.1.0/: termii_python_client-1.1.0-py3-none-any.whl
archives/dist-1.3.0/: termii_python_client-1.3.0-py3-none-any.whl
archives/dist-1.3.1/: termii_python_client-1.3.1-py3-none-any.whl
src/termii/: termii.py
tests/: test_contact.py  test_insights.py  test_messaging.py  test_number_api.py  test_phonebooks.py  test_sender_id.py  test_token.py
