[build-system]
requires = ["setuptools>=61.0", "requests>=2.31.0"]
build-backend = "setuptools.build_meta"

[project]
name = "termii-python-client"
version = "1.0.0"
authors = [ { name="Gabriel Michael Ojomakpene [codewitgabi]", email="codewitgabi222@gmail.com" }, { name="Joshua Joseph", email="joshuajosephizzyjosh@gmail.com" },
]
description = "Termii python package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/codewitgabi/python-termii"
Issues = "https://github.com/codewitgabi/python-termii/issues"
